projects/vb6parse/snapshots/syntax/library/statements/seek/seek_multiple_on_same_line.snap
---
source: projects/vb6parse/src/syntax/library/statements/file_operations/seek.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: SeekStatement
      children:
        - kind: SeekKeyword
          text: Seek
        - kind: Whitespace
          text: " "
        - kind: IdentifierExpression
          children:
            - kind: Octothorpe
              text: "#"
            - kind: IntegerLiteral
              text: "1"
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: " "
        - kind: NumericLiteralExpression
          children:
            - kind: IntegerLiteral
              text: "100"
    - kind: ColonOperator
      text: ":"
    - kind: Whitespace
      text: " "
    - kind: SeekStatement
      children:
        - kind: SeekKeyword
          text: Seek
        - kind: Whitespace
          text: " "
        - kind: IdentifierExpression
          children:
            - kind: Octothorpe
              text: "#"
            - kind: IntegerLiteral
              text: "2"
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: " "
        - kind: NumericLiteralExpression
          children:
            - kind: IntegerLiteral
              text: "200"
    - kind: Newline
      text: "\n"
